--- a/index.html
+++ b/index.html
@@ -173,16 +173,16 @@
           <!-- Надо исправить: это должен быть элемент блока places  +++corrected-->
 
           <div class="places__paragraph">
-            <!-- Надо исправить: это должен быть элемент блока places  -->
-            <p class="text place__paragraph-region">
-              <!-- Надо исправить: это должен быть элемент блока places  -->
+            <!-- Надо исправить: это должен быть элемент блока places +++corrected -->
+            <p class="text places__paragraph-region">
+              <!-- Надо исправить: это должен быть элемент блока places  +++corrected-->
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
               подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на краю российского анклава.
             </p>
-            <p class="text place__paragraph-region">
-              <!-- Надо исправить: это должен быть элемент блока places  -->
+            <p class="text places__paragraph-region">
+              <!-- Надо исправить: это должен быть элемент блока places corrected -->
               На этом Калининградская область не заканчивается. Для
               путешественника и исследователя там же по соседству — самая
               западная точка России, Балтийская коса, — и немецкое наследие
@@ -204,13 +204,13 @@
             >
           </div>
           <img src="foto/kolsky.jpg" alt="Кольский" class="places__image" />
-          <div class="paragraph">
-            <p class="text place__paragraph-region">
+          <div class="places__paragraph">
+            <p class="text places__paragraph-region">
               Почти весь полуостров находится за Полярным кругом. Саамская
               тундра, от которой на юг — тайга, а на север — Ледовитый океан,
               прикидывающийся Баренцевым морем.
             </p>
-            <p class="text place__paragraph-region">
+            <p class="text places__paragraph-region">
               Возможно, вы смотрели Звягинцева и даже слышали историю
               арктического фестиваля в Териберке. Возможно, слово «Хибины» не
               осталось под снегом школьных воспоминаний об уроках географии.
@@ -233,15 +233,15 @@
             >
           </div>
           <img src="foto/altai.jpg" alt="Алтай" class="places__image" />
-          <div class="paragraph">
-            <p class="text place__paragraph-region">
+          <div class="places__paragraph">
+            <p class="text places__paragraph-region">
               Алтай — одно из красивейших мест в России. В первую очередь из-за
               гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
               соснами, горные реки и озёра. А если вы откроете в автомобиле
               окна, сможете познакомиться с невидимым чудом здешних мест —
               горным воздухом.
             </p>
-            <p class="text place__paragraph-region">
+            <p class="text places__paragraph-region">
               Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
               Так вы увидите всё разнообразие местной флоры и фауны. По лесам
               Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся
@@ -263,13 +263,13 @@
             alt="Зимний Байкал"
             class="places__image"
           />
-          <div class="paragraph">
-            <p class="text place__paragraph-region">
+          <div class="places__paragraph">
+            <p class="text places__paragraph-region">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
               знают, что это самый большой источник пресной воды и одно из
               красивейших мест в России.
             </p>
-            <p class="text place__paragraph-region">
+            <p class="text places__paragraph-region">
               Конечно, это всё так. Но Байкал ещё идеальное место
               для соревнований по скийорингу. Это такой вид спорта, когда лыжник
               привязывает себя к мотоциклу, и тандем старается развить как можно
@@ -288,8 +288,8 @@
             >
           </div>
           <img src="foto/karelia.jpg" alt="Карелия" class="places__image" />
-          <div class="paragraph">
-            <p class="text place__paragraph-region">
+          <div class="places__paragraph">
+            <p class="text places__paragraph-region">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
               вымахивает на 30 метров — леса карельских национальных парков
@@ -601,9 +601,9 @@
 	- вынесите папку place/ из папки places/
   это независимый блок и должен быть на одном уровне с остальными
     
-  - link:hover по брифу должен иметь значение 0.7
+  - link:hover по брифу должен иметь значение 0.7 +++исправил
 
-  - .footer__link удалите подчеркивание
+  - .footer__link удалите подчеркивание +++corrected
 
   на 1280:
   - ширина .places, .comments, .cover, .footer не соответствует макету
