--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
   - .footer__link удалите подчеркивание +++corrected
 
   на 1280:
-  - ширина .places, .comments, .cover, .footer не соответствует макету
+  - ширина .places, .comments, .cover, .footer не соответствует макету +++corrected
 
   на 1024:
   - .photo__grid размер не соответствует макету
