--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         </div>
       </section>
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover">
-        <h2 class="title cover__title">До Байкала «на собаках»</h2>
+        <h2 class="title cover__title">До Байкала «на&nbsp;собаках»</h2>
         <p class="text cover__subtitle">
           По мотивам учебной темы о Транссибе и iframes — путешествие от столицы
           до Байкала на электричках.
