--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Путешествия по России</title>
     <link rel="stylesheet" href="vendor/normalize.css" />
-    <link rel="stylesheet" href="pages/page.css" />
+    <link rel="stylesheet" href="pages/index.css" />
     <!-- Отлично! правильно оформлен head -->
   </head>
   <body>
@@ -23,13 +23,13 @@
       </header>
       <section class="lead">
         <!-- Надо исправить: используйте тег section +++ corrected-->
-        <h1 class="title lead__title">Путешествия по России</h1>
+        <h1 class="title lead__title">Путешествия по&nbsp;России</h1>
         <!-- Отлично! правильно выделен заголовок страницы и обозначен тегом h1 -->
         <p class="subtitle lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
         <!-- Отлично! подзаголовок сделан с помощью параграфа -->
-        <figure>
+        <figure class="lead__figure">
           <img
             src="foto/polka.jpg"
             class="lead__image"
@@ -590,7 +590,7 @@
 
  - комментарии в разметке
 
- - Для текстовых используется font-family: 'Inter', это является не совсем корректным решением. В том случае, если по какой-либо причине, например, шрифты не загрузятся или будет использоваться браузер, не поддерживающий современные расширения формата, следует предусмотреть такой исход и один или несколько из системных шрифтов. Используйте font-family: 'Inter', Arial, sans-serif; Желательно задать каждому блоку font-family
+ - Для текстовых используется font-family: 'Inter', это является не совсем корректным решением. В том случае, если по какой-либо причине, например, шрифты не загрузятся или будет использоваться браузер, не поддерживающий современные расширения формата, следует предусмотреть такой исход и один или несколько из системных шрифтов. Используйте font-family: 'Inter', Arial, sans-serif; Желательно задать каждому блоку font-family 
 
   - .header__lang удалите фиксированную высоту
 
