--- a/index.html
+++ b/index.html
@@ -156,32 +156,32 @@
       </section>
       <section class="places">
         <!-- Надо исправить: используйте тег section +++corrected-->
-        <div class="places__place">
-          <h2 class="title places__title">Куршская коса</h2>
-          <div class="places__place-website">
-            <p class="places__url-heading">URL</p>
+        <div class="place places__place">
+          <h2 class="title place__title">Куршская коса</h2>
+          <div class="place__place-website">
+            <p class="place__url-heading">URL</p>
             <!-- Можно лучше: вместо капса лучше использовать text-transform: uppercase -->
             <a
               href="http://park-kosa.ru/"
               target="_blank"
-              class="link places__url"
+              class="link place__url"
               >park-kosa.ru</a
             >
             <!-- Можно лучше: для внешних ссылок можно добавить атрибут target="_blank" +++исправил-->
           </div>
-          <img src="foto/kosa.jpg" alt="Куршская коса" class="places__image" />
+          <img src="foto/kosa.jpg" alt="Куршская коса" class="place__image" />
           <!-- Надо исправить: это должен быть элемент блока places  +++corrected-->
 
-          <div class="places__paragraph">
+          <div class="place__paragraph">
             <!-- Надо исправить: это должен быть элемент блока places +++corrected -->
-            <p class="text places__paragraph-region">
+            <p class="text place__paragraph-region">
               <!-- Надо исправить: это должен быть элемент блока places  +++corrected-->
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
               подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на краю российского анклава.
             </p>
-            <p class="text places__paragraph-region">
+            <p class="text place__paragraph-region">
               <!-- Надо исправить: это должен быть элемент блока places corrected -->
               На этом Калининградская область не заканчивается. Для
               путешественника и исследователя там же по соседству — самая
@@ -193,24 +193,25 @@
           </div>
         </div>
 
-        <div class="places__place">
-          <h2 class="title places__title">Кольский</h2>
-          <div class="places__place-website">
-            <p class="places__url-heading">URL</p>
+        <div class="place places__place">
+          <h2 class="title place__title">Кольский</h2>
+          <div class="place__place-website">
+            <p class="place__url-heading">URL</p>
             <a
-              href="https://poehali.club/na-kolskij-poluostrov-s-national-geographic-rossiya/" target="_blank"
-              class="link places__url"
+              href="https://poehali.club/na-kolskij-poluostrov-s-national-geographic-rossiya/"
+              target="_blank"
+              class="link place__url"
               >National Geographic</a
             >
           </div>
-          <img src="foto/kolsky.jpg" alt="Кольский" class="places__image" />
-          <div class="places__paragraph">
-            <p class="text places__paragraph-region">
+          <img src="foto/kolsky.jpg" alt="Кольский" class="place__image" />
+          <div class="place__paragraph">
+            <p class="text place__paragraph-region">
               Почти весь полуостров находится за Полярным кругом. Саамская
               тундра, от которой на юг — тайга, а на север — Ледовитый океан,
               прикидывающийся Баренцевым морем.
             </p>
-            <p class="text places__paragraph-region">
+            <p class="text place__paragraph-region">
               Возможно, вы смотрели Звягинцева и даже слышали историю
               арктического фестиваля в Териберке. Возможно, слово «Хибины» не
               осталось под снегом школьных воспоминаний об уроках географии.
@@ -222,26 +223,27 @@
           </div>
         </div>
 
-        <div class="places__place">
-          <h2 class="title places__title">Алтай</h2>
-          <div class="places__place-website">
-            <p class="places__url-heading">URL</p>
+        <div class="place places__place">
+          <h2 class="title place__title">Алтай</h2>
+          <div class="place__place-website">
+            <p class="place__url-heading">URL</p>
             <a
-              href="https://www.facebook.com/altairegion22/" target="_blank"
-              class="link places__url"
+              href="https://www.facebook.com/altairegion22/"
+              target="_blank"
+              class="link place__url"
               >Facebook</a
             >
           </div>
-          <img src="foto/altai.jpg" alt="Алтай" class="places__image" />
-          <div class="places__paragraph">
-            <p class="text places__paragraph-region">
+          <img src="foto/altai.jpg" alt="Алтай" class="place__image" />
+          <div class="place__paragraph">
+            <p class="text place__paragraph-region">
               Алтай — одно из красивейших мест в России. В первую очередь из-за
               гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
               соснами, горные реки и озёра. А если вы откроете в автомобиле
               окна, сможете познакомиться с невидимым чудом здешних мест —
               горным воздухом.
             </p>
-            <p class="text places__paragraph-region">
+            <p class="text place__paragraph-region">
               Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
               Так вы увидите всё разнообразие местной флоры и фауны. По лесам
               Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся
@@ -250,26 +252,29 @@
           </div>
         </div>
 
-        <div class="places__place">
-          <h2 class="title places__title">Зимний Байкал</h2>
-          <div class="places__place-website">
-            <p class="places__url-heading">URL</p>
-            <a href="https://vk.com/baikalmile" target="_blank" class="link places__url"
+        <div class="place places__place">
+          <h2 class="title place__title">Зимний Байкал</h2>
+          <div class="place__place-website">
+            <p class="place__url-heading">URL</p>
+            <a
+              href="https://vk.com/baikalmile"
+              target="_blank"
+              class="link place__url"
               >https://vk.com/baikalmile</a
             >
           </div>
           <img
             src="foto/winter-baikal.jpg"
             alt="Зимний Байкал"
-            class="places__image"
+            class="place__image"
           />
-          <div class="places__paragraph">
-            <p class="text places__paragraph-region">
+          <div class="place__paragraph">
+            <p class="text place__paragraph-region">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
               знают, что это самый большой источник пресной воды и одно из
               красивейших мест в России.
             </p>
-            <p class="text places__paragraph-region">
+            <p class="text place__paragraph-region">
               Конечно, это всё так. Но Байкал ещё идеальное место
               для соревнований по скийорингу. Это такой вид спорта, когда лыжник
               привязывает себя к мотоциклу, и тандем старается развить как можно
@@ -279,17 +284,20 @@
           </div>
         </div>
 
-        <div class="places__place">
-          <h2 class="title places__title">Карелия</h2>
-          <div class="places__place-website">
-            <p class="places__url-heading">URL</p>
-            <a href="http://vodlozero.ru/" target="_blank" class="link places__url"
+        <div class="place places__place">
+          <h2 class="title place__title">Карелия</h2>
+          <div class="place__place-website">
+            <p class="place__url-heading">URL</p>
+            <a
+              href="http://vodlozero.ru/"
+              target="_blank"
+              class="link place__url"
               >http://vodlozero.ru/</a
             >
           </div>
-          <img src="foto/karelia.jpg" alt="Карелия" class="places__image" />
-          <div class="places__paragraph">
-            <p class="text places__paragraph-region">
+          <img src="foto/karelia.jpg" alt="Карелия" class="place__image" />
+          <div class="place__paragraph">
+            <p class="text place__paragraph-region">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
               вымахивает на 30 метров — леса карельских национальных парков
@@ -332,7 +340,8 @@
             </div>
           </a>
           <a
-            href="https://vimeo.com/290675450" target="_blank"
+            href="https://vimeo.com/290675450"
+            target="_blank"
             class="bloсk__item block__item_bg_observatory"
           >
             <img
@@ -450,7 +459,11 @@
           </div>
         </div>
       </section>
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover">
+      <a
+        href="https://stampsy.com/na-elektrichkakh-do-baikala"
+        target="_blank"
+        class="cover"
+      >
         <h2 class="title cover__title">До Байкала «на&nbsp;собаках»</h2>
         <p class="text cover__subtitle">
           По мотивам учебной темы о Транссибе и iframes — путешествие от столицы
