Готово к второму ревью

--- a/index.html
+++ b/index.html
@@ -603,15 +603,15 @@
 
  - комментарии в разметке
 
- - Для текстовых используется font-family: 'Inter', это является не совсем корректным решением. В том случае, если по какой-либо причине, например, шрифты не загрузятся или будет использоваться браузер, не поддерживающий современные расширения формата, следует предусмотреть такой исход и один или несколько из системных шрифтов. Используйте font-family: 'Inter', Arial, sans-serif; Желательно задать каждому блоку font-family 
+ - Для текстовых используется font-family: 'Inter', это является не совсем корректным решением. В том случае, если по какой-либо причине, например, шрифты не загрузятся или будет использоваться браузер, не поддерживающий современные расширения формата, следует предусмотреть такой исход и один или несколько из системных шрифтов. Используйте font-family: 'Inter', Arial, sans-serif; Желательно задать каждому блоку font-family +++corrected
 
-  - .header__lang удалите фиксированную высоту
+  - .header__lang удалите фиксированную высоту +++corrected
 
-  - .place__paragraph-region, .paragraph удалите overflow hidden
+  - .place__paragraph-region, .paragraph удалите overflow hidden +++corrected
     
-	- вынесите стилизацию page в свой css файл
+	- вынесите стилизацию page в свой css файл +++corrected
 
-	- вынесите папку place/ из папки places/
+	- вынесите папку place/ из папки places/ +++corrected
   это независимый блок и должен быть на одном уровне с остальными
     
   - link:hover по брифу должен иметь значение 0.7 +++исправил
@@ -622,39 +622,39 @@
   - ширина .places, .comments, .cover, .footer не соответствует макету +++corrected
 
   на 1024:
-  - .photo__grid размер не соответствует макету
-  - .cover высота не соответствует макету
+  - .photo__grid размер не соответствует макету +++исправил
+  - .cover высота не соответствует макету +++исправил
   
   на 768:
-  - .photo__grid размер не соответствует макету
-  - размер видео и внутренние отступы не соответствуют макету
-  - в .container__comment порядок элементов не соответствует макету
-  - .cover высота не соответствует макету
+  - .photo__grid размер не соответствует макету +++исправил
+  - размер видео и внутренние отступы не соответствуют макету +++исправил
+  - в .container__comment порядок элементов не соответствует макету +++исправил
+  - .cover высота не соответствует макету +++исправил
 
-  - между 375 и 768 растягивается изображение .block__item
+  - между 375 и 768 растягивается изображение .block__item +++исправил
 
   на 375 и 320:
-  - размер логотипа не соответствует макету
-  - параметры шрифта у языков не соответствуют макету
-  - уменьшите отступы у заголовка и подзаголовка в .lead
-  - .intro__text параметры шрифта не соответствуют макету
-  - .photo__grid размер не соответствует макету
-  - .block__duration параметры шрифта не соответствуют макету
-  - в .container__comment порядок элементов не соответствует макету
-  - .cover высота не соответствует макету
+  - размер логотипа не соответствует макету +++исправил
+  - параметры шрифта у языков не соответствуют макету +++исправил
+  - уменьшите отступы у заголовка и подзаголовка в .lead +++исправил
+  - .intro__text параметры шрифта не соответствуют макету +++corrected
+  - .photo__grid размер не соответствует макету +++corrected
+  - .block__duration параметры шрифта не соответствуют макету +++corrected
+  - в .container__comment порядок элементов не соответствует макету  +++corrected
+  - .cover высота не соответствует макету +++corrected
 
   на 320:
-  - горизонтальный скролл
-  - расстояние между .photo__grid 8 пикселей
+  - горизонтальный скролл +++corrected
+  - расстояние между .photo__grid 8 пикселей +++corrected
 
 
     Можно улучшить:
 
     - Поправьте отступы в блоках на всех разрешениях
-    Вы установили высоту строки у заголовка и координат как в макете и задали отступ тоже как в макете, проблема в том что все эти программы (Figma/Avocode/Zeplin) не учитывают высоту строки т.е. они показывают отступ от символа до символа, а браузер отступ делает от высоты строки до высоты строки. Т.е. это не бриф в котором указаны размеры, они могут css быть другие, включая pixel perfect можно подогнать
+    Вы установили высоту строки у заголовка и координат как в макете и задали отступ тоже как в макете, проблема в том что все эти программы (Figma/Avocode/Zeplin) не учитывают высоту строки т.е. они показывают отступ от символа до символа, а браузер отступ делает от высоты строки до высоты строки. Т.е. это не бриф в котором указаны размеры, они могут css быть другие, включая pixel perfect можно подогнать  +++corrected
 https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi?hl=ru
    
-    - в стилях модификатора оставьте только изменяющиеся параметры (наример, .block__item)
+    - в стилях модификатора оставьте только изменяющиеся параметры (наример, .block__item) +++corrected
 
     - Комментарии в разметке
 
