--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
     Наша команда приносит извинения, при проверке работы на предыдущем спринте были пропущены ошибки.
     Коментарии "Надо исправить" необходимо внести, т.к в дальнейшем вы можете столкнуться с проблемами при выполнении заданий и сдачи проектных и дипломной работы.
 
-    Надо исправить:
+    Надо исправить: +++Все замечания исправил. По ходу исправления выявил и другие не учтённые. Тоже исправил) Спасибо за рекомендации! 
 
  - комментарии в разметке
 
