--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@ https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdm
 
     - Комментарии в разметке
 
-    - Удалите сломанные пути до файла. В консоли браузера сейчас подсвечены ошибки, в каких путях не нашелся файл. Хорошей практикой является работа с консолью без ошибок.
+    - Удалите сломанные пути до файла. В консоли браузера сейчас подсвечены ошибки, в каких путях не нашелся файл. Хорошей практикой является работа с консолью без ошибок. +++ удалю в недельный перерыв, перед курсом JS
 
     - в навигации в footer на мобильных макетах (320 и 375) поправьте расстояние между ссылками. 
    бразер и Figma по-разному считают вертикальное расстояние между текстовыми элементами, поэтому проста цифра из макета не совпадает
