--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         </div>
       </header>
       <section class="lead">
-        <!-- Надо исправить: используйте тег section +++ corrected-->
         <h1 class="title lead__title">Путешествия по&nbsp;России</h1>
         <!-- Отлично! правильно выделен заголовок страницы и обозначен тегом h1 -->
         <p class="subtitle lead__subtitle">
@@ -37,12 +36,10 @@
           />
           <figcaption class="lead__caption">Ваша полка — верхняя</figcaption>
         </figure>
-        <!-- Можно лучше: для изображения и его описания можете использовать тег figure
-                https://developer.mozilla.org/ru/docs/Web/HTML/Element/figure +++corrected-->
-        <!--вопрос: но так же получается лишняя обёртка или нет?-->
+        <!--вопрос: но так же получается лишняя обёртка или нет?
+        это семантически верно. мы же не называем лишней оберткой ul для li-->
       </section>
       <section class="intro">
-        <!-- Надо исправить: используйте тег section +++corrected-->
         <h2 class="title intro__title">Чего мы там не видели?</h2>
         <!--<h3 class="subtitle intro__subtitle">
           Зачем путешествовать по своему дому
@@ -92,7 +89,6 @@
         <!-- Отлично! Вы используете в разметке семантические теги списка ul -->
       </section>
       <section class="photo">
-        <!-- Надо исправить: используйте тег section +++corrected-->
         <img
           src="foto/train.jpg"
           alt="Красивая природа России"
@@ -155,7 +151,6 @@
         />
       </section>
       <section class="places">
-        <!-- Надо исправить: используйте тег section +++corrected-->
         <div class="place places__place">
           <h2 class="title place__title">Куршская коса</h2>
           <div class="place__place-website">
@@ -167,22 +162,17 @@
               class="link place__url"
               >park-kosa.ru</a
             >
-            <!-- Можно лучше: для внешних ссылок можно добавить атрибут target="_blank" +++исправил-->
           </div>
           <img src="foto/kosa.jpg" alt="Куршская коса" class="place__image" />
-          <!-- Надо исправить: это должен быть элемент блока places  +++corrected-->
 
           <div class="place__paragraph">
-            <!-- Надо исправить: это должен быть элемент блока places +++corrected -->
             <p class="text place__paragraph-region">
-              <!-- Надо исправить: это должен быть элемент блока places  +++corrected-->
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
               подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на краю российского анклава.
             </p>
             <p class="text place__paragraph-region">
-              <!-- Надо исправить: это должен быть элемент блока places corrected -->
               На этом Калининградская область не заканчивается. Для
               путешественника и исследователя там же по соседству — самая
               западная точка России, Балтийская коса, — и немецкое наследие
@@ -312,10 +302,8 @@
         </div>
       </section>
       <section class="video">
-        <!-- Надо исправить: используйте тег section +++corrected-->
         <h2 class="title video__title">В глубины Земли и в дальний космос</h2>
         <p class="subtitle video__subtitle">
-          <!-- Можно лучше: используйте для подзаголовков параграфы +++corrected-->
           Видео от студии Stereotactic о местах в России, где ведутся
           фундаментальные исследования
         </p>
@@ -325,7 +313,6 @@
             target="_blank"
             class="bloсk__item block__item_bg_kamchatka"
           >
-            <!-- Можно лучше: для внешних ссылок можно добавить атрибут target="_blank" +++исправил-->
             <img
               src="foto/icon_play.svg"
               alt="Иконка Пуск"
@@ -404,7 +391,6 @@
         </div>
       </div>-->
       <section class="comments">
-        <!-- Надо исправить: используйте тег section +++corrected-->
         <h2 class="title comments__title">
           Фотографы, снимающие Россию
         </h2>
@@ -412,7 +398,6 @@
           Природа и люди вдохновили их работы, удостоенные наград на
           международных конкурсах
         </p>
-        <!-- Можно лучше: используйте для подзаголовков параграфы +++corrected-->
 
         <div class="container comments__container">
           <div class="container__comment">
@@ -426,7 +411,8 @@
               выгляньте “наружу”…»
             </p>
             <!-- Можно лучше: По смыслу это цитата, так что тут лучше использовать элемент blockquote. 
-              Подробнее можно почитать тут: https://developer.mozilla.org/ru/docs/Web/HTML/Element/blockquote+++ Насколько я понял из описания, элемент <blockquote> заключает в себя текст, который является цитатой. Так же у него есть атрибут cite, которого в нашем задании нет. Насколько существует необходимость заключать данную цитату в элемент <blockquote> в данном контексте? Готов исправит, но пока что не особо понимаю необходимость -->
+              Подробнее можно почитать тут: https://developer.mozilla.org/ru/docs/Web/HTML/Element/blockquote+++ Насколько я понял из описания, элемент <blockquote> заключает в себя текст, который является цитатой. Так же у него есть атрибут cite, которого в нашем задании нет. Насколько существует необходимость заключать данную цитату в элемент <blockquote> в данном контексте? Готов исправит, но пока что не особо понимаю необходимость
+              Это не критично,  container__quote-text по смыслу цитата, а container__author - автор -->
             <p class="container__author">Виктор Лягушкин</p>
           </div>
 
@@ -536,9 +522,6 @@
       </div>-->
       <footer class="footer">
         <p class="text footer__text-copyright">&copy; 2020. Олег Черняков</p>
-        <!-- Можно лучше: для значка копирайт используйте мнемоники html
-                           https://html5book.ru/specsimvoly-html
-                        -->
         <nav class="menu">
           <ul class="footer__list">
             <li>
@@ -578,8 +561,6 @@
             </li>
           </ul>
         </nav>
-
-        <!-- Надо исправить: по смыслу эти ссылки - навигация. Оберните их в список <nav>. используйте список nav > ul > li > a +++corrected-->
       </footer>
     </div>
   </body>
@@ -595,57 +576,27 @@
         - Размечены все макеты
         - На большом экране контент центрируется
         - Используется векторная графика
-
-    Наша команда приносит извинения, при проверке работы на предыдущем спринте были пропущены ошибки.
-    Коментарии "Надо исправить" необходимо внести, т.к в дальнейшем вы можете столкнуться с проблемами при выполнении заданий и сдачи проектных и дипломной работы.
-
     Надо исправить: +++Все замечания исправил. По ходу исправления выявил и другие не учтённые. Тоже исправил) Спасибо за рекомендации! 
 
- - комментарии в разметке
 
- - Для текстовых используется font-family: 'Inter', это является не совсем корректным решением. В том случае, если по какой-либо причине, например, шрифты не загрузятся или будет использоваться браузер, не поддерживающий современные расширения формата, следует предусмотреть такой исход и один или несколько из системных шрифтов. Используйте font-family: 'Inter', Arial, sans-serif; Желательно задать каждому блоку font-family +++corrected
-
-  - .header__lang удалите фиксированную высоту +++corrected
-
-  - .place__paragraph-region, .paragraph удалите overflow hidden +++corrected
-    
-	- вынесите стилизацию page в свой css файл +++corrected
-
-	- вынесите папку place/ из папки places/ +++corrected
-  это независимый блок и должен быть на одном уровне с остальными
-    
-  - link:hover по брифу должен иметь значение 0.7 +++исправил
-
-  - .footer__link удалите подчеркивание +++corrected
+  - .place__paragraph удалите overflow hidden
 
   на 1280:
-  - ширина .places, .comments, .cover, .footer не соответствует макету +++corrected
+  - горизонтальный скролл (проверьте блок photo)
+  - ширина .header, .intro, .comments, .cover не соответствует макету
 
   на 1024:
-  - .photo__grid размер не соответствует макету +++исправил
-  - .cover высота не соответствует макету +++исправил
+  - .photo не соответствует макету
+  *** не совпадает кол-во изображений в ряду
   
   на 768:
-  - .photo__grid размер не соответствует макету +++исправил
-  - размер видео и внутренние отступы не соответствуют макету +++исправил
-  - в .container__comment порядок элементов не соответствует макету +++исправил
-  - .cover высота не соответствует макету +++исправил
-
-  - между 375 и 768 растягивается изображение .block__item +++исправил
+  - .lead__image должно быть на всю ширину экрана
 
   на 375 и 320:
-  - размер логотипа не соответствует макету +++исправил
-  - параметры шрифта у языков не соответствуют макету +++исправил
-  - уменьшите отступы у заголовка и подзаголовка в .lead +++исправил
-  - .intro__text параметры шрифта не соответствуют макету +++corrected
-  - .photo__grid размер не соответствует макету +++corrected
-  - .block__duration параметры шрифта не соответствуют макету +++corrected
-  - в .container__comment порядок элементов не соответствует макету  +++corrected
-  - .cover высота не соответствует макету +++corrected
+  - .intro__text параметры шрифта не соответствуют макету 
+  - .place__title добавьте отступ слева
+  - .comments__subtitle line-height не соответсвует макету
 
-  на 320:
-  - горизонтальный скролл +++corrected
-  - расстояние между .photo__grid 8 пикселей +++corrected
 
 
     Можно улучшить:
@@ -653,10 +604,9 @@
     - Поправьте отступы в блоках на всех разрешениях
     Вы установили высоту строки у заголовка и координат как в макете и задали отступ тоже как в макете, проблема в том что все эти программы (Figma/Avocode/Zeplin) не учитывают высоту строки т.е. они показывают отступ от символа до символа, а браузер отступ делает от высоты строки до высоты строки. Т.е. это не бриф в котором указаны размеры, они могут css быть другие, включая pixel perfect можно подогнать  +++corrected
 https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi?hl=ru
-   
-    - в стилях модификатора оставьте только изменяющиеся параметры (наример, .block__item) +++corrected
+  
 
-    - Комментарии в разметке
+    - Удалите лишние файлы из архива проекта
 
     - Удалите сломанные пути до файла. В консоли браузера сейчас подсвечены ошибки, в каких путях не нашелся файл. Хорошей практикой является работа с консолью без ошибок. +++ удалю в недельный перерыв, перед курсом JS
 
