--- a/index.html
+++ b/index.html
@@ -524,35 +524,35 @@
         <p class="text footer__text-copyright">&copy; 2020. Олег Черняков</p>
         <nav class="menu">
           <ul class="footer__list">
-            <li>
+            <li class="footer__item">
               <a
                 href="https://yandex.ru/maps/213/moscow/?ll=37.622504%2C55.753215&z=10"
                 class="link footer__link"
                 >Карты</a
               >
             </li>
-            <li>
+            <li class="footer__item">
               <a
                 href="https://yandex.ru/pogoda/moscow"
                 class="link footer__link"
                 >Погода</a
               >
             </li>
-            <li>
+            <li class="footer__item">
               <a
                 href="https://rasp.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=rasp_ru"
                 class="link footer__link"
                 >Расписание</a
               >
             </li>
-            <li>
+            <li class="footer__item">
               <a
                 href="https://calendar.yandex.ru/week?uid=952628032"
                 class="link footer__link"
                 >Календарь</a
               >
             </li>
-            <li>
+            <li class="footer__item">
               <a
                 href="https://travel.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=travel_ru"
                 class="link footer__link"
@@ -579,23 +579,23 @@
     Надо исправить: +++Все замечания исправил. По ходу исправления выявил и другие не учтённые. Тоже исправил) Спасибо за рекомендации! 
 
 
-  - .place__paragraph удалите overflow hidden
+  - .place__paragraph удалите overflow hidden +++исправил
 
   на 1280:
-  - горизонтальный скролл (проверьте блок photo)
-  - ширина .header, .intro, .comments, .cover не соответствует макету
+  - горизонтальный скролл (проверьте блок photo) +++исправил
+  - ширина .header, .intro, .comments, .cover не соответствует макету +++исправил
 
   на 1024:
-  - .photo не соответствует макету
-  *** не совпадает кол-во изображений в ряду
+  - .photo не соответствует макету +++исправил
+  *** не совпадает кол-во изображений в ряду +++исправил
   
   на 768:
-  - .lead__image должно быть на всю ширину экрана
+  - .lead__image должно быть на всю ширину экрана +++исправил
 
   на 375 и 320:
-  - .intro__text параметры шрифта не соответствуют макету 
-  - .place__title добавьте отступ слева
-  - .comments__subtitle line-height не соответсвует макету
+  - .intro__text параметры шрифта не соответствуют макету +++исправил
+  - .place__title добавьте отступ слева +++исправил
+  - .comments__subtitle line-height не соответсвует макету +++исправил
 
 
 
@@ -606,13 +606,13 @@
 https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi?hl=ru
   
 
-    - Удалите лишние файлы из архива проекта
+    - Удалите лишние файлы из архива проекта+++ sorry, corrected
 
     - Удалите сломанные пути до файла. В консоли браузера сейчас подсвечены ошибки, в каких путях не нашелся файл. Хорошей практикой является работа с консолью без ошибок. +++ удалю в недельный перерыв, перед курсом JS
 
     - в навигации в footer на мобильных макетах (320 и 375) поправьте расстояние между ссылками. 
    бразер и Figma по-разному считают вертикальное расстояние между текстовыми элементами, поэтому проста цифра из макета не совпадает
-   наложите макет на страницу и сверьте расстояние
+   наложите макет на страницу и сверьте расстояние +++исправил
 
 
   Пожалуйста, не удаляйте комментарии
