--- a/index.html
+++ b/index.html
@@ -579,40 +579,16 @@
     Надо исправить: +++Все замечания исправил. По ходу исправления выявил и другие не учтённые. Тоже исправил) Спасибо за рекомендации! 
 
 
-  - .place__paragraph удалите overflow hidden +++исправил
-
-  на 1280:
-  - горизонтальный скролл (проверьте блок photo) +++исправил
-  - ширина .header, .intro, .comments, .cover не соответствует макету +++исправил
-
-  на 1024:
-  - .photo не соответствует макету +++исправил
-  *** не совпадает кол-во изображений в ряду +++исправил
-  
-  на 768:
-  - .lead__image должно быть на всю ширину экрана +++исправил
-
-  на 375 и 320:
-  - .intro__text параметры шрифта не соответствуют макету +++исправил
-  - .place__title добавьте отступ слева +++исправил
-  - .comments__subtitle line-height не соответсвует макету +++исправил
-
-
+Отличная работа! Критичные комментарии исправлены! Удачи в дальнейшем обучении!
+ https://habr.com/ru/company/netologyru/blog/327294/
+ 
 
     Можно улучшить:
 
-    - Поправьте отступы в блоках на всех разрешениях
-    Вы установили высоту строки у заголовка и координат как в макете и задали отступ тоже как в макете, проблема в том что все эти программы (Figma/Avocode/Zeplin) не учитывают высоту строки т.е. они показывают отступ от символа до символа, а браузер отступ делает от высоты строки до высоты строки. Т.е. это не бриф в котором указаны размеры, они могут css быть другие, включая pixel perfect можно подогнать  +++corrected
-https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi?hl=ru
-  
-
-    - Удалите лишние файлы из архива проекта+++ sorry, corrected
+    - Между 768 и 375 перестройте раньше блок .place раньше, чтобы текст не оказывался в узкой колонке
 
     - Удалите сломанные пути до файла. В консоли браузера сейчас подсвечены ошибки, в каких путях не нашелся файл. Хорошей практикой является работа с консолью без ошибок. +++ удалю в недельный перерыв, перед курсом JS
 
-    - в навигации в footer на мобильных макетах (320 и 375) поправьте расстояние между ссылками. 
-   бразер и Figma по-разному считают вертикальное расстояние между текстовыми элементами, поэтому проста цифра из макета не совпадает
-   наложите макет на страницу и сверьте расстояние +++исправил
 
 
   Пожалуйста, не удаляйте комментарии
