--- a/index.html
+++ b/index.html
@@ -6,40 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Путешествия по России</title>
     <link rel="stylesheet" href="vendor/normalize.css" />
-    <link rel="stylesheet" href="pages/index.css" />
-    <!-- Отлично! правильно оформлен head -->
+    <link rel="stylesheet" href="pages/page.css" />
   </head>
   <body>
     <div class="page">
       <header class="header">
         <img src="foto/logo.svg" alt="Логотип" class="header__iogo" />
-        <!-- Отлично! логотип загружен в векторном формате -->
-
         <div class="header__langs">
           <a href="#" class="link header__lang header__lang_active">Ru</a>
-          <!-- Отлично! Выбранный язык реализован с помощью модификатора -->
           <a href="#" class="link header__lang">En</a>
         </div>
       </header>
-      <section class="lead">
-        <h1 class="title lead__title">Путешествия по&nbsp;России</h1>
-        <!-- Отлично! правильно выделен заголовок страницы и обозначен тегом h1 -->
+      <div class="lead">
+        <h1 class="title lead__title">Путешествия по России</h1>
         <p class="subtitle lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
-        <!-- Отлично! подзаголовок сделан с помощью параграфа -->
-        <figure class="lead__figure">
-          <img
-            src="foto/polka.jpg"
-            class="lead__image"
-            alt="kalegin-michail-179870-unsplash"
-          />
-          <figcaption class="lead__caption">Ваша полка — верхняя</figcaption>
-        </figure>
-        <!--вопрос: но так же получается лишняя обёртка или нет?
-        это семантически верно. мы же не называем лишней оберткой ul для li-->
-      </section>
-      <section class="intro">
+        <img
+          src="foto/polka.jpg"
+          class="lead__image"
+          alt="kalegin-michail-179870-unsplash"
+        />
+        <p class="lead__caption">Ваша полка — верхняя</p>
+      </div>
+      <div class="intro">
         <h2 class="title intro__title">Чего мы там не видели?</h2>
         <!--<h3 class="subtitle intro__subtitle">
           Зачем путешествовать по своему дому
@@ -86,9 +76,8 @@
             Аэропортов <span class="intro__span-accent"> 241</span>
           </li>
         </ul>
-        <!-- Отлично! Вы используете в разметке семантические теги списка ul -->
-      </section>
-      <section class="photo">
+      </div>
+      <div class="photo">
         <img
           src="foto/train.jpg"
           alt="Красивая природа России"
@@ -149,23 +138,19 @@
           alt="Красивая природа России"
           class="photo__grid"
         />
-      </section>
-      <section class="places">
-        <div class="place places__place">
-          <h2 class="title place__title">Куршская коса</h2>
-          <div class="place__place-website">
-            <p class="place__url-heading">URL</p>
-            <!-- Можно лучше: вместо капса лучше использовать text-transform: uppercase -->
-            <a
-              href="http://park-kosa.ru/"
-              target="_blank"
-              class="link place__url"
+
+      </div>
+      <div class="places">
+        <div class="places__place">
+          <h2 class="title places__title">Куршская коса</h2>
+          <div class="places__place-website">
+            <p class="places__url-heading">URL</p>
+            <a href="http://park-kosa.ru/" class="link places__url"
               >park-kosa.ru</a
             >
           </div>
           <img src="foto/kosa.jpg" alt="Куршская коса" class="place__image" />
-
-          <div class="place__paragraph">
+          <div class="paragraph">
             <p class="text place__paragraph-region">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
@@ -183,19 +168,18 @@
           </div>
         </div>
 
-        <div class="place places__place">
-          <h2 class="title place__title">Кольский</h2>
-          <div class="place__place-website">
-            <p class="place__url-heading">URL</p>
+        <div class="places__place">
+          <h2 class="title places__title">Кольский</h2>
+          <div class="places__place-website">
+            <p class="places__url-heading">URL</p>
             <a
               href="https://poehali.club/na-kolskij-poluostrov-s-national-geographic-rossiya/"
-              target="_blank"
-              class="link place__url"
+              class="link places__url"
               >National Geographic</a
             >
           </div>
           <img src="foto/kolsky.jpg" alt="Кольский" class="place__image" />
-          <div class="place__paragraph">
+          <div class="paragraph">
             <p class="text place__paragraph-region">
               Почти весь полуостров находится за Полярным кругом. Саамская
               тундра, от которой на юг — тайга, а на север — Ледовитый океан,
@@ -213,19 +197,18 @@
           </div>
         </div>
 
-        <div class="place places__place">
-          <h2 class="title place__title">Алтай</h2>
-          <div class="place__place-website">
-            <p class="place__url-heading">URL</p>
+        <div class="places__place">
+          <h2 class="title places__title">Алтай</h2>
+          <div class="places__place-website">
+            <p class="places__url-heading">URL</p>
             <a
               href="https://www.facebook.com/altairegion22/"
-              target="_blank"
-              class="link place__url"
+              class="link places__url"
               >Facebook</a
             >
           </div>
           <img src="foto/altai.jpg" alt="Алтай" class="place__image" />
-          <div class="place__paragraph">
+          <div class="paragraph">
             <p class="text place__paragraph-region">
               Алтай — одно из красивейших мест в России. В первую очередь из-за
               гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
@@ -242,14 +225,11 @@
           </div>
         </div>
 
-        <div class="place places__place">
-          <h2 class="title place__title">Зимний Байкал</h2>
-          <div class="place__place-website">
-            <p class="place__url-heading">URL</p>
-            <a
-              href="https://vk.com/baikalmile"
-              target="_blank"
-              class="link place__url"
+        <div class="places__place">
+          <h2 class="title places__title">Зимний Байкал</h2>
+          <div class="places__place-website">
+            <p class="places__url-heading">URL</p>
+            <a href="https://vk.com/baikalmile" class="link places__url"
               >https://vk.com/baikalmile</a
             >
           </div>
@@ -258,7 +238,7 @@
             alt="Зимний Байкал"
             class="place__image"
           />
-          <div class="place__paragraph">
+          <div class="paragraph">
             <p class="text place__paragraph-region">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
               знают, что это самый большой источник пресной воды и одно из
@@ -274,19 +254,16 @@
           </div>
         </div>
 
-        <div class="place places__place">
-          <h2 class="title place__title">Карелия</h2>
-          <div class="place__place-website">
-            <p class="place__url-heading">URL</p>
-            <a
-              href="http://vodlozero.ru/"
-              target="_blank"
-              class="link place__url"
+        <div class="places__place">
+          <h2 class="title places__title">Карелия</h2>
+          <div class="places__place-website">
+            <p class="places__url-heading">URL</p>
+            <a href="http://vodlozero.ru/" class="link places__url"
               >http://vodlozero.ru/</a
             >
           </div>
           <img src="foto/karelia.jpg" alt="Карелия" class="place__image" />
-          <div class="place__paragraph">
+          <div class="paragraph">
             <p class="text place__paragraph-region">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
@@ -300,17 +277,16 @@
             </p>
           </div>
         </div>
-      </section>
-      <section class="video">
+      </div>
+      <div class="video">
         <h2 class="title video__title">В глубины Земли и в дальний космос</h2>
-        <p class="subtitle video__subtitle">
+        <h3 class="subtitle video__subtitle">
           Видео от студии Stereotactic о местах в России, где ведутся
           фундаментальные исследования
-        </p>
+        </h3>
         <div class="block video__block">
           <a
             href="https://vimeo.com/81106671"
-            target="_blank"
             class="bloсk__item block__item_bg_kamchatka"
           >
             <img
@@ -328,7 +304,6 @@
           </a>
           <a
             href="https://vimeo.com/290675450"
-            target="_blank"
             class="bloсk__item block__item_bg_observatory"
           >
             <img
@@ -345,7 +320,7 @@
             </div>
           </a>
         </div>
-      </section>
+      </div>
       <!--<div class="additional">
         <h2 class="title  additional__title">А также</h2>
         <h3 class="subtitle additional__subtitle">
@@ -390,15 +365,14 @@
           </div>
         </div>
       </div>-->
-      <section class="comments">
+      <div class="comments">
         <h2 class="title comments__title">
           Фотографы, снимающие Россию
         </h2>
-        <p class="subtitle comments__subtitle">
+        <h3 class="subtitle comments__subtitle">
           Природа и люди вдохновили их работы, удостоенные наград на
           международных конкурсах
-        </p>
-
+        </h3>
         <div class="container comments__container">
           <div class="container__comment">
             <img
@@ -410,9 +384,6 @@
               «Если вам кажется, что в России ничего не происходит, то просто
               выгляньте “наружу”…»
             </p>
-            <!-- Можно лучше: По смыслу это цитата, так что тут лучше использовать элемент blockquote. 
-              Подробнее можно почитать тут: https://developer.mozilla.org/ru/docs/Web/HTML/Element/blockquote+++ Насколько я понял из описания, элемент <blockquote> заключает в себя текст, который является цитатой. Так же у него есть атрибут cite, которого в нашем задании нет. Насколько существует необходимость заключать данную цитату в элемент <blockquote> в данном контексте? Готов исправит, но пока что не особо понимаю необходимость
-              Это не критично,  container__quote-text по смыслу цитата, а container__author - автор -->
             <p class="container__author">Виктор Лягушкин</p>
           </div>
 
@@ -444,21 +415,15 @@
             <p class="container__author">Сергей Максимишин</p>
           </div>
         </div>
-      </section>
-      <a
-        href="https://stampsy.com/na-elektrichkakh-do-baikala"
-        target="_blank"
-        class="cover"
-      >
-        <h2 class="title cover__title">До Байкала «на&nbsp;собаках»</h2>
+      </div>
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover">
+        <h2 class="title cover__title">До Байкала «на собаках»</h2>
         <p class="text cover__subtitle">
           По мотивам учебной темы о Транссибе и iframes — путешествие от столицы
           до Байкала на электричках.
         </p>
       </a>
-      <!--   <div class="emblem">
-        <h2 class="title emblem__title">       
-  Природа на гербах российских городов
+<!--          Природа на гербах российских городов
         </h2>
         <div class="emblem__items">
           <div class="emblem__item">
@@ -522,91 +487,64 @@
       </div>-->
       <footer class="footer">
         <p class="text footer__text-copyright">&copy; 2020. Олег Черняков</p>
-        <nav class="menu">
-          <ul class="footer__list">
-            <li class="footer__item">
-              <a
-                href="https://yandex.ru/maps/213/moscow/?ll=37.622504%2C55.753215&z=10"
-                class="link footer__link"
-                >Карты</a
-              >
-            </li>
-            <li class="footer__item">
-              <a
-                href="https://yandex.ru/pogoda/moscow"
-                class="link footer__link"
-                >Погода</a
-              >
-            </li>
-            <li class="footer__item">
-              <a
-                href="https://rasp.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=rasp_ru"
-                class="link footer__link"
-                >Расписание</a
-              >
-            </li>
-            <li class="footer__item">
-              <a
-                href="https://calendar.yandex.ru/week?uid=952628032"
-                class="link footer__link"
-                >Календарь</a
-              >
-            </li>
-            <li class="footer__item">
-              <a
-                href="https://travel.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=travel_ru"
-                class="link footer__link"
-                >Путешествия</a
-              >
-            </li>
-          </ul>
-        </nav>
+        <ul class="footer__list">
+          <li>
+            <a
+              href="https://yandex.ru/maps/213/moscow/?ll=37.622504%2C55.753215&z=10"
+              class="link footer__link"
+              >Карты</a
+            >
+          </li>
+          <li>
+            <a href="https://yandex.ru/pogoda/moscow" class="link footer__link"
+              >Погода</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://rasp.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=rasp_ru"
+              class="link footer__link"
+              >Расписание</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://calendar.yandex.ru/week?uid=952628032"
+              class="link footer__link"
+              >Календарь</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://travel.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=travel_ru"
+              class="link footer__link"
+              >Путешествия</a
+            >
+          </li>
+        </ul>
       </footer>
     </div>
   </body>
 </html>
 
-<!-- В целом по работе: 
+<!-- 
+  Принято
 
-      Отлично! Понравилось в работе:
+  
+  Можно лучше:
+  - Структура папок не самая лучшая.
+  - Если просто скопировать из фигмы все отступы, размеры шрифтов, высоты строк и всё прочее, то на выходе работа всё равно будет отличаться от того, что нарисовано в фигме.
+    Чтобы проверить насколько ваша работа на самом деле отличается от того, что нарисовано в фигме можно воспользоваться плагином для хрома - https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi
 
-        - Страница валидна
-        - Использованы семантические теги и списки
-        - Для переиспользования в проекте есть блоки
-        - Размечены все макеты
-        - На большом экране контент центрируется
-        - Используется векторная графика
-    Надо исправить: +++Все замечания исправил. По ходу исправления выявил и другие не учтённые. Тоже исправил) Спасибо за рекомендации! 
+  Всегда используйте валидатор для самопроверки верстки https://validator.w3.org/#validate_by_input
+  Он поможет отловить большинство ошибок.
 
+  Чтобы разобраться с БЭМ рекомендую:
+  Почитайте или перечитайте ещё раз если уже читали про БЭМ на официальном сайте БЭМа - https://ru.bem.info/methodology/quick-start/
+  Там вам нужно прочитать 5 первых разделов - Быстрый старт, основные понятия, соглашение по именованию, css и html. +++++Спасибо!
+  Разделы про уровни переопределения пока можно пропустить, они только ещё больше запутают. ++++:-))
+  Можно еще посмотреть первую половину классного видео про БЭМ здесь - https://www.youtube.com/watch?v=sX8xQrwk6ko (про простые модификаторы Владимир в этом видео говорит на 21 минуте) ++++ Большое спасибо!
 
-Отличная работа! Критичные комментарии исправлены! Удачи в дальнейшем обучении!
- https://habr.com/ru/company/netologyru/blog/327294/
- 
-
-    Можно улучшить:
-
-    - Между 768 и 375 перестройте раньше блок .place раньше, чтобы текст не оказывался в узкой колонке
-
-    - Удалите сломанные пути до файла. В консоли браузера сейчас подсвечены ошибки, в каких путях не нашелся файл. Хорошей практикой является работа с консолью без ошибок. +++ удалю в недельный перерыв, перед курсом JS
-
-
-
-  Пожалуйста, не удаляйте комментарии
-Исправленные комментарии помечайте +
-
-Для получения зачета исправьте комментарии "Надо исправить"
-
-Полезные материалы:
-
-Масштабируемые шрифты
-- https://codepen.io/Maks113/pen/dgWpxE
-- https://codepen.io/CrocoDillon/pen/fBJxu
-- https://codepen.io/TrevorJTClarke/pen/GoJYOo
-- https://codepen.io/podolskiis/pen/erxmKW
-
-Плотность пикселей
-- https://vc.ru/design/19864-pixels-in-mobile-design
-
-Что должен знать фронтенд-разработчик
-- https://habr.com/ru/company/netologyru/blog/327294/
 -->
+
+
